# advection

./: CMakeLists.txt  README
include/: advection.h  grid.h  interpolation.h  utils.h
src/: CMakeLists.txt  advection.gnu  interpolation.gnu  plotAdvection.sh  plotInterpolation.sh  runAdvection.cpp  runInterpolation.cpp
tests/: CMakeLists.txt  advection.gnu  displayAdvection.gnu  displayInterpolation.gnu  plotAdvection.sh  plotInterpolation.sh  runAdvection.cpp  runInterpolation.cpp
